--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "firebase-admin": "^8.9.2",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^1.19.4"
   }
