--- a/ANDROID-FRONTEND/app/src/main/AndroidManifest.xml
+++ b/ANDROID-FRONTEND/app/src/main/AndroidManifest.xml
@@ -13,9 +13,8 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".SettingsActivity"
-            android:label="@string/title_activity_settings">
-            android:theme="@style/AppTheme.NoActionBar"
-        </activity>
+            android:label="@string/title_activity_settings"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".SignUpActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".LoginActivity"
