--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -19,7 +19,7 @@
     "reactstrap": "^8.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=80 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
